# ICPC

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: conquestCampaign.cpp  template.cpp
src/graphs/: cantinaofbabel.cpp  conquestcampaign.cpp  curveknights.cpp  emptyingthebaltic.cpp  firetrucksarered.cpp  treehouses.cpp
src/search/: paintings.cpp
